--- a/src/locales/traditionalChinese/mainScreen.json
+++ b/src/locales/traditionalChinese/mainScreen.json
@@ -44,7 +44,8 @@
       "about_us": "關於安心回家",
       "disclaimer": "免責聲明",
       "change_log": "更新紀錄",
-      "report_issue": "回報問題"
+      "report_issue": "回報問題",
+      "language": "語言"
     }
   }
 }
