chore: update english translation

--- a/src/locales/english/confirmPageIcon.json
+++ b/src/locales/english/confirmPageIcon.json
@@ -1,5 +1,5 @@
 {
-  "name": "Confirm Page Icon",
+  "name": "Confirm Page Icon Settings",
   "message": { "test_place": "Test Venue" },
   "form": {
     "custom_icon": "Custom Icon"
