chore: fix typos and update translations

--- a/src/locales/english/cameraSetting.json
+++ b/src/locales/english/cameraSetting.json
@@ -2,6 +2,7 @@
   "name": "Camera Settings",
   "form": {
     "camera_choice": {
+      "auto": "AUTO",
       "label": "Camera Source",
       "explain": "Change camera source until there is a preview"
     }
