--- a/src/locales/english/confirm.json
+++ b/src/locales/english/confirm.json
@@ -3,7 +3,7 @@
     "you_have_entered_taxi": "You have entered taxi",
     "res_mark": "Registration Mark",
     "you_have_entered_venue": "You have entered the venue",
-    "remember_to_leave": "Remember to press\"Leave\" button",
+    "remember_to_leave": "Remember to press the \"Leave Venue\" button",
     "set_auto_leave_time": "Set Auto-leave Time",
     "enter_at": "Enter Venue at {{time}}",
     "auto_leave_at": "Auto-leave at {{time}}",
@@ -13,8 +13,8 @@
     "leave_time_earlier_than_enter": "Leave time cannot be earlier than enter time"
   },
   "form": {
-    "auto_leave_after_x_hour": "Auto leave after {{hour}} hour",
-    "auto_leave_at": "Auto LEave at {{time}}",
+    "auto_leave_after_x_hour": "Auto leave after {{hour}} hour(s)",
+    "auto_leave_at": "Auto Leave at {{time}}",
     "hour": "Hours"
   },
   "button": {
