--- a/src/locales/english/tutorial.json
+++ b/src/locales/english/tutorial.json
@@ -1,23 +1,23 @@
 {
   "add_to_home_screen": {
-    "name": "新增至主畫面",
+    "name": "Add to Home screen",
     "message": {
-      "add_to_home_screen_first": "新增至主畫面先啦",
-      "to_act_as_an_app": "唔係點似個App"
+      "add_to_home_screen_first": "First things first: add BackHomeSafe to Home screen.",
+      "to_act_as_an_app": "Add to Home screen for a full-native app experience."
     },
     "step": {
-      "ios": "用Safari開=>分享=>新增至主畫面",
-      "android": "用Chrome開=>右上選項=>新增至主畫面/安裝應用程式"
+      "ios": "Launch with \"Safari\" => Tap the \"Bookmark\" icon at the bottom of the screen (a box with an upward-pointing arrow) => Tap \"Add to Home screen\"",
+      "android": "Launch with \"Chrome\" => Tap the menu icon (3 dots in upper right-hand corner) => Tap \"Add to Home screen\"."
     }
   },
-  "disclaimer": { "name": "免責聲明", "accept": "我同意" },
+  "disclaimer": { "name": "Disclaimer", "accept": "I agree" },
   "setup_password": {
-    "name": "設定密碼",
+    "name": "Setup Password",
     "message": {
-      "password_usage": "密碼用於加密出行紀錄"
+      "password_usage": "Setup password to protect your Visit Records."
     }
   },
   "language": {
-    "name": "語言"
+    "name": "Language"
   }
 }
