feat: multiple enter location

--- a/src/locales/english/global.json
+++ b/src/locales/english/global.json
@@ -16,7 +16,8 @@
     "preview": "Preview",
     "unlock": "Unlock",
     "change": "Change",
-    "confirm": "Confirm"
+    "confirm": "Confirm",
+    "confirm_page": "Confirm Page"
   },
   "form": {
     "optional": "Optional"
