feat: bookmark location

--- a/src/locales/english/mainScreen.json
+++ b/src/locales/english/mainScreen.json
@@ -54,5 +54,11 @@
       "day": "day",
       "days": "days"
     }
+  },
+  "bookmark": {
+    "name": "Bookmark",
+    "message": {
+      "empty": "No Bookmark"
+    }
   }
 }
