--- a/src/locales/english/mainScreen.json
+++ b/src/locales/english/mainScreen.json
@@ -49,7 +49,8 @@
       "report_issue": "Bug Report",
       "language": "Language",
       "auto_delete_record": "Auto Delete Record",
-      "export_data": "Export Records"
+      "export_data": "Export Records",
+      "vaccinationQRReader": "Vaccination QR Code Reader"
     },
     "form": {
       "day": "day",
