--- a/src/locales/traditionalChinese/vaccination_qr_reader.json
+++ b/src/locales/traditionalChinese/vaccination_qr_reader.json
@@ -3,7 +3,7 @@
   "message": {
     "scan_qr_code": "掃瞄二維碼",
     "doesnt_support_get_user_media": "此裝置不支援 getUserMedia API",
-    "sure_above_ios_14": "，請確保裝置在IOS 14或以上"
+    "sure_latest_ios": "，請確保裝置在最新的IOS版本"
   },
   "button": {
     "back_home": "回到主頁",
